# cho

./: Cargo.toml  README.md  build.rs  idea_for_future_design.md
src/: accounts.rs  amounts.rs  buckets.rs  cli.rs  goals.rs  ignored_transaction.rs  main.rs  period.rs  predicted_income.rs  remaining.rs  vault.rs
src/amounts/: mod.rs
src/cli/: amounts.rs  argument_parsing.rs  formatting.rs  legacy_remaining_money_screen.rs  mod.rs  remaining_operation.rs  tests.rs
src/cli/remaining_operation/: calculator.rs  legacy_remaining_money_screen.rs  mod.rs  remaining_operation.rs
src/period/: calendar_month_period.rs  fixed_length_period.rs  interface.rs  mod.rs  periods.rs  periods_configuration.rs
src/predicted_transaction/: mod.rs  recurring.rs  transactions.rs  vault_values.rs
src/remaining/: calculator.rs  legacy.rs  mod.rs  operations.rs  vault_values.rs
src/remaining_operation/: amounts.rs  core_types.rs  illustrations.rs  mod.rs  test.rs  tests.rs
src/remaining_operation/operand_builders/: timeline.rs
src/remaining_operation/operand_builders_helpers/: timeline.rs
src/transaction/: mod.rs  recurring.rs  transactions.rs
