[package]
name = "cho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"
tempfile = "3.5.0"
mockall_double = "0.3.0"
derive_builder = "0.20.0"
rust_decimal = { version = "1.34.3", features = ["serde-str"] }
rust_decimal_macros = "1.34.2"
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"

[dev-dependencies]
mockall = "0.11.4"
